# mats-backtracking

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
configs/: backtracking_state_transition.yaml  backtracking_state_transition_phase2.yaml
context/: context_1.md  context_2_run1.md  context_3_phase2.md  context_4_phase2_continuation.md  context_5_phase2_rerun.md  setup_context.md
data/processed/: gsm8k_200.jsonl
reports/: Backtracking_State_Transition_Phase2_Spec.md  backtracking_phase2_report.md  backtracking_state_transition_report.md
runs/20251223_232541/: config_resolved.yaml  meta.json
runs/20251223_232541/analysis/: ablation_importance.csv  backtracking_events.csv  condition_comparison.csv  formatting_summary.csv  logit_lens.csv  selected_layers.json  summary_metrics.json
runs/20251224_045331/: config_resolved.yaml  meta.json
runs/20251224_045331/analysis/: continuation_ablation_results.csv  hook_debug.json  metrics_v2.json  scale_sweep_results.csv  subset_sweep_results.csv
scripts/: activate_env.sh  bootstrap.sh  doctor.sh  push_all.sh  run_backtracking_phase2.sh  run_backtracking_pipeline.sh  run_smoke_test.py  snapshot_run.sh
src/backtracking/: __init__.py  cli.py  config.py  detect.py  generate.py  hooks.py  io.py  modeling.py  paths.py  prompts.py  report.py  seed.py  tokenization.py
src/backtracking/analysis/: __init__.py  ablation_scan.py  continuations.py  events.py  logit_lens.py  metrics_v2.py  plots.py  plots_phase2.py  sweeps.py
