[project]
name = "mats-backtracking"
version = "0.1.0"
description = "Mechanistic interpretability research: investigating backtracking and state transitions in language models"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "MATS Researcher" }
]
keywords = ["mechanistic-interpretability", "transformers", "pytorch", "research"]

dependencies = [
    # Core Deep Learning
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "datasets>=2.14.0",
    "accelerate>=0.24.0",
    "safetensors>=0.4.0",
    
    # Mechanistic Interpretability
    "einops>=0.7.0",
    "fancy-einsum>=0.0.3",
    "jaxtyping>=0.2.23",
    
    # Scientific Computing
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.18.0",
    
    # Jupyter / Interactive
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "ipywidgets>=8.1.0",
    "nbformat>=5.9.0",
    
    # Utilities
    "tqdm>=4.66.0",
    "rich>=13.6.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "typer>=0.9.0",
    
    # Experiment Tracking
    "wandb>=0.16.0",
    
    # Code Quality
    "ruff>=0.1.6",
    "pre-commit>=3.5.0",
]

[project.optional-dependencies]
# TransformerLens for mechanistic interpretability
mech-interp = [
    "transformer-lens>=1.10.0",
    "circuitsvis>=1.43.2",
]

# Development tools
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
    "ipdb>=0.13.13",
]

# All optional dependencies
all = [
    "mats-backtracking[mech-interp,dev]",
]

[project.scripts]
doctor = "backtracking.cli:doctor"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backtracking"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["backtracking"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true


